index gaps fixed

--- a/css/index.css
+++ b/css/index.css
@@ -833,7 +833,7 @@ html {
         gap: 5px;
         position: relative;
         z-index: 3000;
-        margin-top: -15rem;
+        margin-top: -14vh;
     }
 
     .fa-brands {
@@ -841,6 +841,7 @@ html {
         width: 2rem;
         margin-top: 1rem;
     }
+
 
     /* --- Hamburger Menu --- */
 
@@ -894,9 +895,6 @@ html {
         display: block;
     }
 
-    .footer {
-        margin-top: 0;
-    }
 
 
     @media screen and (min-width: 769px) {
